--- a/template.yaml
+++ b/template.yaml
@@ -35,7 +35,7 @@ Globals:
     Architectures:
       - x86_64
     # Layers:
-    #   - !Ref FortressSharedLayer
+    #   - !Ref POCSharedLayer
     Environment:
       Variables:
         ENV: !Ref Env
@@ -66,7 +66,7 @@ Resources:
   POCAPILogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: !Join ['', ['/aws/apigateway/', !Sub '${AWS::StackName}', '/Fortress-custom-log-group']]
+      LogGroupName: !Join ['', ['/aws/apigateway/', !Sub '${AWS::StackName}', '/POC-custom-log-group']]
       RetentionInDays: !If [IsDev, 1, 365] 
 
   POCAPI:
@@ -92,10 +92,10 @@ Resources:
         DestinationArn: !GetAtt POCAPILogGroup.Arn
         Format: '$context.requestId $context.identity.sourceIp $context.identity.caller $context.identity.user $context.httpMethod $context.resourcePath $context.status $context.integration.latency $context.requestTime $context.protocol $context.responseLength $context.integrationErrorMessage' 
 
-  # FortressSharedLayer:
+  # POCSharedLayer:
   #   Type: AWS::Serverless::LayerVersion
   #   Properties:
-  #     LayerName: !Sub 'Fortress-SharedLayer-${Env}'
+  #     LayerName: !Sub 'POC-SharedLayer-${Env}'
   #     Description: Shared NPM package.
   #     ContentUri: 'layer/'
   #     CompatibleRuntimes:
