--- a/samconfig.toml
+++ b/samconfig.toml
@@ -2,32 +2,33 @@ version = 0.1
 [default]
 [default.deploy]
 [default.deploy.parameters]
-stack_name = "fortress-store-portal-dev"
+stack_name = "poc-main"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-mq3eebwnc4qm"
-s3_prefix = "fortress-store-portal-dev"
+s3_prefix = "poc-main"
 region = "us-east-1"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
 image_repositories = []
 disable_rollback = true
 
-[dev]
-[dev.deploy]
-[dev.deploy.parameters]
-stack_name = "fortress-store-portal-dev"
+[main]
+[main.deploy]
+[main.deploy.parameters]
+stack_name = "poc-main"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-mq3eebwnc4qm"
-s3_prefix = "fortress-store-portal-dev"
+s3_prefix = "poc-main"
 region = "us-east-1"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
 image_repositories = []
+disable_rollback = true
 
 [stage]
 [stage.deploy]
 [stage.deploy.parameters]
-stack_name = "fortress-store-portal-stage"
+stack_name = "poc-stage"
 s3_bucket = "sam-cli-suntec-s3-samclisourcebucket-g65n9kwrflxz"
-s3_prefix = "fortress-store-portal-stage"
+s3_prefix = "poc-stage"
 region = "ap-southeast-1"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
@@ -36,9 +37,9 @@ image_repositories = []
 [prod]
 [prod.deploy]
 [prod.deploy.parameters]
-stack_name = "fortress-store-portal-prod"
+stack_name = "poc-prod"
 s3_bucket = "sam-cli-suntec-s3-samclisourcebucket-g65n9kwrflxz"
-s3_prefix = "fortress-store-portal-prod"
+s3_prefix = "poc-prod"
 region = "ap-southeast-1"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
