backend ci pipeline

--- a/template.yaml
+++ b/template.yaml
@@ -15,6 +15,7 @@ Parameters:
       - prod
       - stage
       - poc
+      - main
 
 # Conditions:
 #   IsProd: !Equals
@@ -36,15 +37,15 @@ Globals:
       - x86_64
     # Layers:
     #   - !Ref POCSharedLayer
-    Environment:
-      Variables:
-        ENV: !Ref Env
+    # Environment:
+    #   Variables:
+    #     ENV: !Ref Env
 
 Resources:
   HelloWorldFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: ./helloworld
+      CodeUri: helloworld
       Handler: index.handler
       Runtime: nodejs18.x
       Timeout: 365
