--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -65,6 +65,8 @@ jobs:
           echo "::set-output name=params::$PARAMS"
 
       - name: Deploy Backend
+        environment:
+          name: main
         if: github.event_name == 'push'
         env:
           PARAMS: ${{ steps.construct-params.outputs.params }}
