backend ci pipeline

--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -69,6 +69,8 @@ jobs:
         env:
           PARAMS: ${{ steps.construct-params.outputs.params }}
         run: |
+          ls -al
+          pwd
           sam build
           sam deploy \
             --s3-bucket poc-main \
