--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -33,12 +33,12 @@ jobs:
           role-duration-seconds: 1200
           audience: sts.amazonaws.com
 
-      - name: Install and Update AWS CLI
-        run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install --update
-          aws --version
+      # - name: Install and Update AWS CLI
+      #   run: |
+      #     curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+      #     unzip awscliv2.zip
+      #     sudo ./aws/install --update
+      #     aws --version
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
