--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -59,7 +59,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          ENV: {{ secrets.ENV }}
+          # ENV: {{ secrets.ENV }}
         run: |
           printenv | grep 'AWS' > .env.${{ secrets.ENV }}
           cat .env.${{ secrets.ENV }}
