backend ci pipeline

--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -59,11 +59,11 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          # ENV: {{ secrets.ENV }}
+          # ENVIRONMENT: {{ secrets.ENVIRONMENT }}
         run: |
-          printenv | grep 'AWS' > .env.${{ secrets.ENV }}
-          printenv | grep 'ENV' >> .env.${{ secrets.ENV }}
-          cat .env.${{ secrets.ENV }}
+          printenv | grep 'AWS' > .env.${{ secrets.ENVIRONMENT }}
+          printenv | grep 'ENVIRONMENT' >> .env.${{ secrets.ENVIRONMENT }}
+          cat .env.${{ secrets.ENVIRONMENT }}
 
       - name: Read .env file and construct parameter overrides
         id: construct-params
@@ -72,7 +72,7 @@ jobs:
           while IFS= read -r line; do
             IFS='=' read -r key value <<< "$line"
             PARAMS="$PARAMS ParameterKey=$key,ParameterValue=$value"
-          done < .env.${{ secrets.ENV }}
+          done < .env.${{ secrets.ENVIRONMENT }}
           echo "::set-output name=params::$PARAMS"
 
       - name: Deploy Backend
