backend ci pipeline

--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -59,10 +59,9 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          # ENVIRONMENT: {{ secrets.ENVIRONMENT }}
+          ENVIRONMENT: {{ secrets.ENVIRONMENT }}
         run: |
           printenv | grep 'AWS' > .env.${{ secrets.ENVIRONMENT }}
-          printenv | grep 'ENVIRONMENT' >> .env.${{ secrets.ENVIRONMENT }}
           cat .env.${{ secrets.ENVIRONMENT }}
 
       - name: Read .env file and construct parameter overrides
