--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -59,7 +59,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          ENVIRONMENT: {{ secrets.ENVIRONMENT }}
+          # ENVIRONMENT: {{ secrets.ENVIRONMENT }}
         run: |
           printenv | grep 'AWS' > .env.${{ secrets.ENVIRONMENT }}
           cat .env.${{ secrets.ENVIRONMENT }}
