backend ci pipeline

--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -24,12 +24,14 @@ jobs:
           sudo ./sam-installation/install --update
           sam --version
 
-      - name: Install and Update AWS CLI
-        run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip awscliv2.zip
-          sudo ./aws/install --update
-          aws --version
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+          role-duration-seconds: 1200
+          audience: sts.amazonaws.com
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
@@ -45,25 +47,15 @@ jobs:
       # - name: Run Unit Tests
       #   run: NODE_OPTIONS=--max-old-space-size=8192 npm test
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
-
       - name: Create .env file from secrets
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          ENV: ${{ secrets.ENV }}
+          # ENV: {{ secrets.ENV }}
         run: |
-          echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" > .env.${ENV}
-          echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> .env.${ENV}
-          echo "AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}" >> .env.${ENV}
-          echo "Env=${ENV}" >> .env.${ENV}
-          cat .env.${ENV}
+          printenv | grep 'AWS' > .env.${{ secrets.ENV }}
+          cat .env.${{ secrets.ENV }}
 
       - name: Read .env file and construct parameter overrides
         id: construct-params
@@ -77,13 +69,9 @@ jobs:
 
       - name: Deploy Backend
         if: github.event_name == 'push'
-        env:
+        env:         
           ENV: ${{ secrets.ENV }}
           PARAMS: ${{ steps.construct-params.outputs.params }}
         run: |
           sam build
-          sam deploy \
-            --s3-bucket poc-main \
-            --stack-name poc-main \
-            --capabilities CAPABILITY_IAM \
-            --parameter-overrides $PARAMS
+          sam deploy --config-env main --parameter-overrides $PARAMS 
