backend ci pipeline

--- a/template.yaml
+++ b/template.yaml
@@ -6,15 +6,9 @@ Description: >
   Sample SAM Template for sam-app3
 
 Parameters:
-  Env:
+  ENV:
     Type: String
     AllowedValues:
-      - local
-      - dev
-      - test
-      - prod
-      - stage
-      - poc
       - main
 
 # Conditions:
