--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -60,6 +60,7 @@ jobs:
       - name: Read .env file and construct parameter overrides
         id: construct-params
         run: |
+          ENV: ${{ secrets.ENV }}
           PARAMS=""
           while IFS= read -r line; do
             IFS='=' read -r key value <<< "$line"
@@ -75,4 +76,4 @@ jobs:
         run: |
           sam validate
           sam build
-          sam deploy --parameter-overrides $PARAMS 
+          sam deploy --parameter-overrides $ENV 
