--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -52,9 +52,9 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          # ENV: {{ secrets.ENV }}
+          ENV: ${{ secrets.ENV }}
         run: |
-          printenv | grep 'AWS' > .env.${{ secrets.ENV }}
+          printenv | grep 'ENV' > .env.${{ secrets.ENV }}
           cat .env.${{ secrets.ENV }}
 
       - name: Read .env file and construct parameter overrides
@@ -70,9 +70,9 @@ jobs:
       - name: Deploy Backend
         if: github.event_name == 'push'
         env:         
-          ENV: ${{ secrets.ENV }}
+          # ENV: ${{ secrets.ENV }}
           PARAMS: ${{ steps.construct-params.outputs.params }}
         run: |
           sam validate
           sam build
-          sam deploy --parameter-overrides $ENV 
+          sam deploy --parameter-overrides $PARAMS 
