backend ci pipeline

--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -52,9 +52,9 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          ENV: ${{ secrets.ENV }}
+          Env: ${{ secrets.ENV }}
         run: |
-          printenv | grep 'ENV' > .env.${{ secrets.ENV }}
+          printenv | grep 'Env' > .env.${{ secrets.ENV }}
           cat .env.${{ secrets.ENV }}
 
       - name: Read .env file and construct parameter overrides
