--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   
-  unit_test:
+  unit_tests:
     if: github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened')
     runs-on: ubuntu-latest
     steps:
