--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -4,13 +4,13 @@ on:
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
-      - dev
+      - main
 
 jobs:
   
   unit_tests:
-    if: github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened')
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened')
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -27,6 +27,7 @@ jobs:
 
   if_merged:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main') || (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && github.ref == 'refs/heads/main')
     environment:
       name: main
     steps:
